# cpp_semestral_project

./: .gitignore  Dockerfile
tools/: .gitignore  CMakeLists.txt
tools/tools/: CMakeLists.txt  DataRetrieval.cpp  DataRetrieval.h  ECalculator.cpp  ECalculator.h  GumboParser.cpp  GumboParser.h  Utilities.h  data.h  main_tools.cpp
